refactor: OpenAPI client for secrets API
